--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,8 @@ set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
+set(PERF ON CACHE BOOL "Datapath transport (infiniband/raw/dpdk/fake)")
+
 # Parse the build type
 if(PERF)
   message(STATUS "Compilation optimized for performance.")
@@ -64,7 +66,7 @@ option(ROCE "Use RoCE if TRANSPORT is infiniband" OFF)
 option(AZURE "Configure DPDK for Azure if TRANSPORT is dpdk" OFF)
 option(PERF "Compile for performance" ON)
 set(PGO "none" CACHE STRING "Profile-guided optimization (generate/use/none)")
-set(LOG_LEVEL "warn" CACHE STRING "Logging level (none/error/warn/info/reorder/trace/cc)") 
+set(LOG_LEVEL "info" CACHE STRING "Logging level (none/error/warn/info/reorder/trace/cc)") 
 
 # Profile-guided optimization
 if(PGO STREQUAL "generate")
