--- a/apps/latency/config
+++ b/apps/latency/config
@@ -1,6 +1,8 @@
 --test_ms 200000000
 --sm_verbose 0
---resp_size 8
+--resp_size 64
 --num_server_processes 1
 --numa_0_ports 0
 --numa_1_ports 1,3
+--process_id 0
+--numa_node 0
