--- a/apps/test_memcpy/config
+++ b/apps/test_memcpy/config
@@ -3,9 +3,9 @@
 --concurrency 128
 --msg_size 1024
 --num_processes 2
---num_client_threads 1
---num_server_threads 1
+--num_threads 1
 --numa_0_ports 0
 --numa_1_ports 1,3
 --process_id 1
 --numa_node 0
+--loop 100000
