--- a/apps/large_rpc_tput/config
+++ b/apps/large_rpc_tput/config
@@ -1,13 +1,14 @@
 --test_ms 30000
---req_size 7900000
+--req_size 4096
 --resp_size 32
 --num_processes 2
---num_proc_0_threads 1
---num_proc_other_threads 1
---concurrency 1
+--num_proc_0_threads 8
+--num_proc_other_threads 8
+--concurrency 16
 --drop_prob 0.0
---profile incast
 --throttle 0
 --throttle_fraction 0.9
 --numa_0_ports 0
 --numa_1_ports 1
+--numa_node 0
+--process_id 1
